--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy==1.24.3
-pandas==1.5.3
-seaborn==0.12.2
-plotly==5.24.1
-streamlit==1.39.0
-matplotlib==3.7.1
+numpy>=1.26.0
+pandas>=2.1.0
+seaborn>=0.13.0
+plotly>=5.18.0
+streamlit>=1.29.0
+matplotlib>=3.8.0
